# immargs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build-test.yaml
examples/: git-immargs.rs  git-immargs_from_env.rs  git.rs  ls-immargs.rs  ls-immargs_from_env.rs  ls.rs  mv-immargs.rs  mv-immargs_from_env.rs  mv.rs
immargs_macros/: Cargo.toml  README.md
immargs_macros/src/: ast.rs  code.rs  ir.rs  lib.rs
src/: arg.rs  error.rs  lexer.rs  lib.rs  macros.rs  utils.rs
tests/: error.rs  help.rs  macro.rs  non_option.rs  option.rs  type.rs  unicode.rs  version.rs
