[package]
name = "immargs_macros"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
include = [ "README.md", "LICENSE-APACHE", "LICENSE-MIT", "src" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
